tests/negative/test_owning_asgn_no_drop_data_elem_propagated.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

data Bar {
    f0:Foo
    f1:Foo
};

fnc bar (b:Bar::noDrop) () {
    sym f0:Foo;
    = f0 ([] b f0);
};

fnc main () () {};